keycloak/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak:4.8.3.Final
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
