keycloak/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/pass-client-tls-cert: |
      pem: true
      infos:
        notafter: true
        notbefore: true
        sans: true
        subject:
          country: true
          province: true
          locality: true
          organization: true
          commonname: true
          serialnumber: true
          domaincomponent: true
        issuer:
          country: true
          province: true
          locality: true
          organization: true
          commonname: true
          serialnumber: true
          domaincomponent: true
spec:
  rules:
  - host: keycloak.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak
          servicePort: http
  tls:
  - secretName: localhost-tls
    hosts:
      - keycloak.localhost
